--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ h2 {
 }
 
 .preview-advantage::before {
-    content: url("./assets/check.svg");
+    content: url("./assets/images/check.svg");
     margin-right: 18px;
 }
 
@@ -561,6 +561,8 @@ h2 {
 
 .results-container {
     position: relative;
+    width: 102.5%;
+    margin-bottom: 160px;
 }
 
 .results-block {
@@ -568,6 +570,106 @@ h2 {
     background-color: #F3F4F7;
     border-radius: 30px;
     margin-right: 30px;
+    padding: 31px 50px 33px 48px;
+}
+
+.points-container {
+    display: flex;
+    gap: 21px;
+}
+
+.point-block-a {
+    background-color: #FFFFFF;
+    padding: 6px 20px 10px 15px;
+    border-radius: 12px;
+    min-width: 111px;
+}
+
+.point-block-b {
+    background-color: #FFFFFF;
+    padding: 6px 20px 10px 15px;
+    border-radius: 12px;
+    min-width: 111px;
+}
+
+.point-head {
+    margin: 0;
+    display: flex;
+    align-items: center;
+
+    font-weight: 400;
+    font-size: 14px;
+    color: #515050;
+}
+
+.small-content {
+    margin-top: 10px;
+    margin-bottom: 21px;
+    font-weight: 300;
+    font-size: 14px;
+}
+
+.point-circle-red {
+    width: 6px;
+    height: 6px;
+    border-radius: 100%;
+    background-color: #FF6060;
+    margin-right: 10px;
+}
+
+.point-circle-green {
+    width: 6px;
+    height: 6px;
+    border-radius: 100%;
+    background-color: #ADD845;
+    margin-right: 10px;
+}
+
+.point-content {
+    margin-bottom: 0;
+    margin-top: 9px;
+    font-weight: 600;
+    font-size: 16px;
+    color: #515050;
+}
+
+.blue-text {
+    color: #185DDC;
+    border-radius: 8px;
+    background-color: #DDE7FF;
+    padding: 5px 11px 5px 11px;
+    width: fit-content;
+
+    font-weight: 400;
+    font-size: 16px;
+
+    margin-top: 25px;
+    margin-bottom: 14px;
+}
+
+.goal-table {
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+}
+
+.list-item-goal::before {
+    content: url(./assets/images/lightning.svg);
+    margin-right: 10px;
+}
+
+.bold-goal {
+    font-weight: 500;
+    font-size: 16px;
+    color: #515050;
+}
+
+.goal-arrows {
+    justify-content: center;
+    top: 35px;
+    right: -580px;
 }
 
 /* ________________________________________________________________________________________________________________________________________________ */
